# myPyProjectTemplate

./: CHANGELOG.md  LICENSE  PFXCore_Architecture.md  PFXCore_Implementation_Plan_V0.11.0.md  PFXFlow_project_spec_v0.10.8.md  PFXFlow_project_spec_v0.11.0.md  PFXFlow_project_spec_v0.9.9.md  PFXFlow_v0.11.0_issues.md  README.md  example.pipeline.toml  example2.pipeline.toml  pfx_genus_run.csh  pfx_header.tcl  pfx_innovus_run.csh  pfx_match_innovus_init.tcl  project_specification_template.md  pyproject.toml  status_failure.json  status_success.json
examples/: design.toml  env.sh  pipeline.toml  run.toml  tech.toml
examples_old/: invocation_genus.txt  invocation_innovus.txt  old_run.toml  pfx_genus.tcl  pfx_match_genus.tcl  pfx_vars.tcl
specs_old/: PFXCore_Implementation_Examples.md  PFXCore_Implementation_Plan.md  PFXFlow_Master_Project_Spec_FULL_MERGED.md  PFXFlow_Master_Project_Spec_Sections_0_to_4.md  PFXFlow_Master_Project_Spec_Tightened_Design_Tech.md  PFXFlow_Master_Project_Spec_with_Design_Tech_Contracts.md  PFXFlow_Master_Project_Spec_with_Ownership_and_Layout.md  PFXFlow_Master_Project_Spec_with_Pipeline_TOML.md  PFXFlow_Master_Project_Spec_with_RunIndex.md  PFXFlow_Master_Project_Spec_with_Semantic_DOE_Layout.md  PFXFlow_Project_Spec_Sections_0_1_2.md  PFXFlow_Project_Spec_Sections_0_1_2_3_with_Architecture.md  PFXFlow_Project_Spec_Sections_0_1_2_3_with_Design_and_Tech.md  PFXFlow_Project_Spec_Sections_0_1_2_DOE_OptionA.md  PFXFlow_Project_Spec_Sections_0_1_2_with_Vars_and_Hooks.md  PFXFlow_Project_Spec_with_PFXCore_PFXStudy.md  PFXFlow_example_pipeline.toml  (+45 more)
(+1 files in other folders)
