[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.0.1"
description = ""
requires-python = ">=3.9"
dependencies = [
  "",
  "",
]

[project.scripts]
gridgen = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [""]
exclude = [""]
